# a2a-chicken-food-safety

./: README.md  pyproject.toml
a2a_chicken_food_safety/: __init__.py  client.py  server.py
